RESOLVED FIXED221142
[LFC][RenderTreeAsText] Apply the "adjustForTableCells" quirk to line break runs
https://bugs.webkit.org/show_bug.cgi?id=221142
Summary [LFC][RenderTreeAsText] Apply the "adjustForTableCells" quirk to line break runs
alan
Reported 2021-01-29 10:51:17 PST
This is a quirk that was introduce long time ago to adjust the vertical position of a <br> run (only in renderer tree output) so that it's as if the table cell content wasn't aligned vertically.
Attachments
Patch (2.00 KB, patch)
2021-01-29 11:01 PST, alan
ews-feeder: commit-queue-
Patch (16.67 KB, patch)
2021-01-29 12:49 PST, alan
ews-feeder: commit-queue-
Patch (31.39 KB, patch)
2021-01-29 18:35 PST, alan
no flags
Patch (39.95 KB, patch)
2021-01-29 19:30 PST, alan
ews-feeder: commit-queue-
alan
Comment 1 2021-01-29 11:01:08 PST
alan
Comment 2 2021-01-29 12:49:15 PST
alan
Comment 3 2021-01-29 18:35:14 PST
alan
Comment 4 2021-01-29 19:30:20 PST
EWS
Comment 5 2021-01-29 21:35:27 PST
Committed r272100: <https://trac.webkit.org/changeset/272100> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418801 [details].
Radar WebKit Bug Importer
Comment 6 2021-01-29 21:36:13 PST
Note You need to log in before you can comment on or make changes to this bug.