[LFC][RenderTreeAsText] Apply the "adjustForTableCells" quirk to line break runs https://bugs.webkit.org/show_bug.cgi?id=221142

Reviewed by Antti Koivisto.

Source/WebCore:

When the table rows get stretched vertically as individual cells grow, the cell content
gets "aligned" vertically (not to confuse it with the align property) by offsetting each line.
However this offset is removed in the render tree dump for historical reasons.
This patch ensures that the modern line layout runs that we create for line breaks (<br>)
produce the same vertical position as the legacy layout runs.

* rendering/RenderTreeAsText.cpp:
(WebCore::RenderTreeAsText::writeRenderObject):

LayoutTests:

* platform/ios/fast/table/005-expected.txt:
* platform/ios/tables/mozilla/bugs/bug106795-expected.txt:
* platform/ios/tables/mozilla/bugs/bug1224-expected.txt:
* platform/ios/tables/mozilla/bugs/bug16252-expected.txt:
* platform/ios/tables/mozilla/bugs/bug20579-expected.txt:
* platform/ios/tables/mozilla/bugs/bug32205-3-expected.txt:
* platform/ios/tables/mozilla/bugs/bug82946-2-expected.txt:
* platform/ios/tables/mozilla/other/wa_table_thtd_rowspan-expected.txt:
* platform/mac-catalina/tables/mozilla/other/wa_table_thtd_rowspan-expected.txt:
* platform/mac/fast/table/005-expected.txt:
* platform/mac/tables/mozilla/bugs/bug106795-expected.txt:
* platform/mac/tables/mozilla/bugs/bug1224-expected.txt:
* platform/mac/tables/mozilla/bugs/bug16252-expected.txt:
* platform/mac/tables/mozilla/bugs/bug20579-expected.txt:
* platform/mac/tables/mozilla/bugs/bug32205-3-expected.txt:
* platform/mac/tables/mozilla/bugs/bug82946-2-expected.txt:
* platform/mac/tables/mozilla/other/wa_table_thtd_rowspan-expected.txt:


Canonical link: https://commits.webkit.org/233509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272100 268f45cc-cd09-0410-ab3c-d52691b4dbfc